// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Bierzo wallet Payment page 1`] = `
<div
  className="MuiBox-root-6 MuiBox-root-7 makeStyles-payment-1"
>
  <div
    className="MuiBox-root-6 MuiBox-root-8 makeStyles-currencyToSend-2"
  >
    <div
      className="MuiPaper-root-10 MuiPaper-elevation2-14 MuiPaper-rounded-11"
    >
      <div
        className="MuiBox-root-6 MuiBox-root-37"
      >
        <div
          className="MuiAvatar-root-38 makeStyles-avatar-9 MuiAvatar-colorDefault-39"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-user fa-w-14 "
            color="#ffffff"
            data-icon="user"
            data-prefix="far"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
        <h6
          className="MuiTypography-root-45 MuiTypography-subtitle2-57 MuiTypography-colorTextPrimary-70 makeStyles-weight-43 makeStyles-weight-44"
        >
          You send
        </h6>
        <div
          className="MuiBox-root-6 MuiBox-root-75"
        >
          <form
            onSubmit={[Function]}
          >
            <div
              className="MuiBox-root-6 MuiBox-root-76"
            >
              <div
                className="MuiBox-root-6 MuiBox-root-77"
              >
                <div
                  className="MuiFormControl-root-79 MuiFormControl-fullWidth-82 MuiTextField-root-78"
                >
                  <div
                    className="MuiInputBase-root-96 MuiOutlinedInput-root-83 MuiInputBase-fullWidth-105 MuiInputBase-formControl-97"
                    onClick={[Function]}
                  >
                    <fieldset
                      aria-hidden={true}
                      className="MuiPrivateNotchedOutline-root-113 MuiOutlinedInput-notchedOutline-90"
                      style={
                        Object {
                          "paddingLeft": 8,
                        }
                      }
                    >
                      <legend
                        className="MuiPrivateNotchedOutline-legend-114"
                        style={
                          Object {
                            "width": 0.01,
                          }
                        }
                      >
                        <span
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "&#8203;",
                            }
                          }
                        />
                      </legend>
                    </fieldset>
                    <input
                      aria-invalid={false}
                      className="MuiInputBase-input-106 MuiOutlinedInput-input-91"
                      disabled={false}
                      name="quantityField"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      placeholder="0,00"
                      required={true}
                      type="text"
                    />
                  </div>
                </div>
              </div>
              <div
                className="MuiBox-root-6 MuiBox-root-115"
              >
                <div
                  className="makeStyles-dropdown-116"
                  onClick={[Function]}
                >
                  <div
                    className="MuiInputBase-root-96 makeStyles-root-117 makeStyles-root-119"
                    onClick={[Function]}
                    role="button"
                  >
                    <input
                      autoComplete="off"
                      className="MuiInputBase-input-106 makeStyles-input-118"
                      name="currencyField"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      readOnly={true}
                      type="text"
                      value=""
                    />
                  </div>
                  <img
                    alt="Phone Menu"
                    className="makeStyles-root-120 makeStyles-noShrink-121"
                    height="5"
                    src="selectChevron.svg"
                    width="8"
                  />
                </div>
              </div>
            </div>
          </form>
        </div>
        <div
          className="MuiBox-root-6 MuiBox-root-125"
        >
          <h6
            className="MuiTypography-root-45 MuiTypography-subtitle2-57 MuiTypography-colorTextSecondary-71 makeStyles-weight-43 makeStyles-weight-126"
          >
            balance: 
            24
             
            IOV
          </h6>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-6 MuiBox-root-127 makeStyles-receiverAddress-3"
  >
    <div
      className="MuiPaper-root-10 MuiPaper-elevation2-14 MuiPaper-rounded-11"
    >
      <div
        className="MuiBox-root-6 MuiBox-root-128"
      >
        <h6
          className="MuiTypography-root-45 MuiTypography-subtitle2-57 MuiTypography-colorTextPrimary-70 makeStyles-weight-43 makeStyles-weight-129"
        >
          To
        </h6>
        <div
          className="MuiBox-root-6 MuiBox-root-130"
        >
          <form
            onSubmit={[Function]}
          >
            <div
              className="MuiFormControl-root-79 MuiFormControl-fullWidth-82 MuiTextField-root-78"
            >
              <div
                className="MuiInputBase-root-96 MuiOutlinedInput-root-83 MuiInputBase-fullWidth-105 MuiInputBase-formControl-97"
                onClick={[Function]}
              >
                <fieldset
                  aria-hidden={true}
                  className="MuiPrivateNotchedOutline-root-113 MuiOutlinedInput-notchedOutline-90"
                  style={
                    Object {
                      "paddingLeft": 8,
                    }
                  }
                >
                  <legend
                    className="MuiPrivateNotchedOutline-legend-114"
                    style={
                      Object {
                        "width": 0.01,
                      }
                    }
                  >
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "&#8203;",
                        }
                      }
                    />
                  </legend>
                </fieldset>
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input-106 MuiOutlinedInput-input-91"
                  disabled={false}
                  name="addressField"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="IOV or wallet address"
                  required={true}
                  type="text"
                />
              </div>
            </div>
          </form>
        </div>
        <div
          className="MuiBox-root-6 MuiBox-root-131"
        >
          <h6
            className="MuiTypography-root-45 MuiTypography-subtitle1-56 MuiTypography-colorTextPrimary-70 makeStyles-weight-43 makeStyles-weight-132"
          >
            How it works
          </h6>
          <div
            className="MuiBox-root-6 MuiBox-root-133"
          >
            <div
              className="makeStyles-container-135"
              onClick={[Function]}
            >
              <img
                alt="Info"
                className="makeStyles-root-120"
                height={16}
                src="info_normal.svg"
                width={16}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-6 MuiBox-root-138 makeStyles-textNote-4"
  >
    <div
      className="MuiPaper-root-10 MuiPaper-elevation2-14 MuiPaper-rounded-11"
    >
      <div
        className="MuiBox-root-6 MuiBox-root-139"
      >
        <div
          className="MuiBox-root-6 MuiBox-root-140"
        >
          <div
            className="MuiBox-root-6 MuiBox-root-141"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-sticky-note fa-w-14 fa-lg "
              color="#a2a6a8"
              data-icon="sticky-note"
              data-prefix="far"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M448 348.106V80c0-26.51-21.49-48-48-48H48C21.49 32 0 53.49 0 80v351.988c0 26.51 21.49 48 48 48h268.118a48 48 0 0 0 33.941-14.059l83.882-83.882A48 48 0 0 0 448 348.106zm-128 80v-76.118h76.118L320 428.106zM400 80v223.988H296c-13.255 0-24 10.745-24 24v104H48V80h352z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          <div
            className="MuiBox-root-6 MuiBox-root-142"
          >
            <form
              onSubmit={[Function]}
            >
              <div
                className="MuiFormControl-root-79 MuiFormControl-fullWidth-82 MuiTextField-root-78"
              >
                <div
                  className="MuiInputBase-root-96 MuiOutlinedInput-root-83 MuiInputBase-fullWidth-105 MuiInputBase-formControl-97 MuiInputBase-multiline-104 MuiOutlinedInput-multiline-89"
                  onClick={[Function]}
                >
                  <fieldset
                    aria-hidden={true}
                    className="MuiPrivateNotchedOutline-root-113 MuiOutlinedInput-notchedOutline-90"
                    style={
                      Object {
                        "paddingLeft": 8,
                      }
                    }
                  >
                    <legend
                      className="MuiPrivateNotchedOutline-legend-114"
                      style={
                        Object {
                          "width": 0.01,
                        }
                      }
                    >
                      <span
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "&#8203;",
                          }
                        }
                      />
                    </legend>
                  </fieldset>
                  <textarea
                    aria-invalid={false}
                    className="MuiInputBase-input-106 MuiOutlinedInput-input-91 MuiInputBase-inputMultiline-108 MuiOutlinedInput-inputMultiline-93"
                    disabled={false}
                    name="textNoteField"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder="Add a note"
                    required={false}
                    rows="2"
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-6 MuiBox-root-143 makeStyles-continue-5"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        className="MuiButtonBase-root-161 Mui-disabled MuiButton-root-144 MuiButton-contained-152 MuiButton-containedPrimary-153 Mui-disabled MuiButton-fullWidth-160"
        disabled={true}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="submit"
      >
        <span
          className="MuiButton-label-145"
        >
          Continue
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`Storyshots Bierzo wallet Welcome page 1`] = `
<div
  className="MuiBox-root-167 MuiBox-root-168 makeStyles-welcome-164"
>
  <div
    className="MuiBox-root-167 MuiBox-root-169 makeStyles-icon-165"
  >
    <img
      alt="Logo"
      className="makeStyles-root-170"
      src="iov-logo.svg"
    />
  </div>
  <div
    className="MuiBox-root-167 MuiBox-root-175"
  >
    <h6
      className="MuiTypography-root-180 MuiTypography-h6-190 makeStyles-weight-178 makeStyles-weight-179"
    >
      IOV Wallet
    </h6>
  </div>
  <div
    className="MuiBox-root-167 MuiBox-root-210"
  >
    <button
      className="MuiButtonBase-root-228 MuiButton-root-211 MuiButton-contained-219 MuiButton-containedPrimary-220 makeStyles-button-166"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-212"
      >
        SEND PAYMENT
      </span>
      <span
        className="MuiTouchRipple-root-231"
      />
    </button>
    <button
      className="MuiButtonBase-root-228 MuiButton-root-211 MuiButton-contained-219 MuiButton-containedPrimary-220 makeStyles-button-166"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-212"
      >
        GET IDENTITIES
      </span>
      <span
        className="MuiTouchRipple-root-231"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-904"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root makeStyles-root-905 makeStyles-root-907"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input makeStyles-input-906"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-925 makeStyles-noShrink-926"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root MuiBox-root-242"
>
  <div
    className="MuiBox-root MuiBox-root-243"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-264"
  >
    <button
      className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-265"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-266"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-267"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-268"
  >
    <button
      aria-label="Export as CSV"
      className="MuiButtonBase-root MuiFab-root makeStyles-root-269 MuiFab-extended makeStyles-extended-270 MuiFab-secondary makeStyles-secondary-272 MuiFab-sizeSmall makeStyles-sizeSmall-271"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiFab-label"
      >
        <div
          className="MuiBox-root MuiBox-root-283"
        >
          <img
            alt="Download"
            className="makeStyles-root-284"
            height={16}
            src="download.svg"
            width={16}
          />
        </div>
        <div
          className="MuiBox-root MuiBox-root-289"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary makeStyles-weight-292 makeStyles-weight-293"
          >
            Download
          </h6>
        </div>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-335"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-338 makeStyles-weight-339"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-370"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-371"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-338 makeStyles-weight-372"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-373"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-374"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-338 makeStyles-weight-375"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root MuiBox-root-376"
    />
  </div>,
  <div
    className="MuiBox-root MuiBox-root-377"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-338 makeStyles-weight-378"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root MuiBox-root-379"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<div
  className="MuiBox-root MuiBox-root-381"
>
  <div
    className="MuiBox-root MuiBox-root-382"
  >
    <img
      alt="Iov Logo"
      className="makeStyles-root-383"
      src="iov-logo.png"
    />
  </div>
  <div
    className="MuiBox-root MuiBox-root-388"
  >
    <div
      className="MuiBox-root MuiBox-root-389"
    >
      <img
        alt="Download"
        className="makeStyles-root-383"
        height={16}
        src="download.svg"
        width={16}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root MuiBox-root-391"
>
  <div
    className="MuiBox-root MuiBox-root-392"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-395 makeStyles-weight-396 makeStyles-inline-393"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-395 makeStyles-weight-427 makeStyles-inline-393"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-428"
  >
    <h6
      className="MuiTypography-root MuiTypography-h6 makeStyles-weight-395 makeStyles-weight-429"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root MuiBox-root-430"
  />
  <div
    className="MuiBox-root MuiBox-root-431"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-432"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-438"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-icon"
            />
            <input
              className="MuiPrivateSwitchBase-input"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </span>
        <span
          className="MuiSwitch-bar"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root MuiBox-root-500"
  >
    <label
      className="MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-icon"
            />
            <input
              className="MuiPrivateSwitchBase-input"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </span>
        <span
          className="MuiSwitch-bar"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-615"
  >
    <div
      className="MuiBox-root MuiBox-root-616"
    >
      <div
        className="MuiBox-root MuiBox-root-617"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate INFO toast
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-640 makeStyles-weight-641"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-info-674"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-710 makeStyles-message-678"
          >
            <div
              className="makeStyles-iconBackground-679"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-711"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-info-674 makeStyles-weight-640 makeStyles-weight-716"
            >
              Hi INFO this is a cool feature. Stay tuned
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-711"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-726"
    >
      <div
        className="MuiBox-root MuiBox-root-727"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate WARN toast
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-640 makeStyles-weight-728"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-warning-675"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-729 makeStyles-message-678"
          >
            <div
              className="makeStyles-iconBackground-679"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-711"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-warning-675 makeStyles-weight-640 makeStyles-weight-730"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-711"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-731"
    >
      <div
        className="MuiBox-root MuiBox-root-732"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Click to generate ERROR toast
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-640 makeStyles-weight-733"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-error-673"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message"
        >
          <div
            className="MuiBox-root MuiBox-root-734 makeStyles-message-678"
          >
            <div
              className="makeStyles-iconBackground-679"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-711"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root MuiTypography-subtitle1 makeStyles-error-673 makeStyles-weight-640 makeStyles-weight-735"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <img
                alt="Close"
                className="makeStyles-root-711"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-512"
  >
    <div
      className="makeStyles-container-514"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-517"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root MuiBox-root-522"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-525 makeStyles-weight-526 makeStyles-inline-523"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-514"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-517"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-559 makeStyles-weight-560"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root MuiTypography-h4 makeStyles-weight-559 makeStyles-weight-591"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-559 makeStyles-weight-592"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root MuiTypography-h5 makeStyles-weight-559 makeStyles-weight-593"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-559 makeStyles-weight-594"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-h6 makeStyles-weight-559 makeStyles-weight-595"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-559 makeStyles-weight-596"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root MuiTypography-body1 makeStyles-weight-559 makeStyles-weight-597"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-559 makeStyles-weight-598"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root MuiTypography-body2 makeStyles-weight-559 makeStyles-weight-599"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-559 makeStyles-weight-600"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-559 makeStyles-weight-601"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-559 makeStyles-weight-602"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-559 makeStyles-weight-603"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorPrimary makeStyles-weight-559 makeStyles-weight-604"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-559 makeStyles-weight-605 makeStyles-inline-557"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-559 makeStyles-weight-606 makeStyles-inline-557"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
  >
    <label
      className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input MuiOutlinedInput-input"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-803"
  >
    <div
      className="makeStyles-dropdown-804"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root makeStyles-root-805 makeStyles-root-807"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input makeStyles-input-806"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-808 makeStyles-noShrink-809"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root MuiBox-root-834"
>
  <div
    className="MuiBox-root MuiBox-root-835"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root Mui-error Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input MuiOutlinedInput-input"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root MuiFormHelperText-contained Mui-error"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-900"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-901"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root Mui-disabled Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-902"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-903"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiFormControl-marginNormal MuiTextField-root"
      >
        <label
          className="MuiFormLabel-root MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend"
              style={
                Object {
                  "width": 0,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <textarea
            aria-invalid={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={5}
            value="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Extension Account Status page 1`] = `
<div
  className="MuiBox-root MuiBox-root-938"
  id="/account"
>
  <div
    className="MuiBox-root MuiBox-root-939"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-942 makeStyles-weight-943 makeStyles-inline-940"
    >
      Account
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-942 makeStyles-weight-974 makeStyles-inline-940"
    >
       
      Status
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-975"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-976"
      >
        <h6
          className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-942 makeStyles-weight-977"
        >
          Available accounts
        </h6>
      </div>
      <div
        className="makeStyles-dropdown-978"
        onClick={[Function]}
      >
        <div
          className="MuiInputBase-root makeStyles-root-979 makeStyles-root-981"
          onClick={[Function]}
          role="button"
        >
          <input
            autoComplete="off"
            className="MuiInputBase-input makeStyles-input-980"
            name="SELECT_FIELD_ATTR"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
        <img
          alt="Phone Menu"
          className="makeStyles-root-999 makeStyles-noShrink-1000"
          height="5"
          src="selectChevron.svg"
          width="8"
        />
      </div>
    </form>
    <div
      className="MuiBox-root MuiBox-root-1004"
    />
    <div
      className="MuiBox-root MuiBox-root-1005"
    >
      <nav
        className="MuiList-root MuiList-padding"
      >
        <div
          className="MuiBox-root MuiBox-root-1010"
        >
          <li
            className="MuiListItem-root MuiListItem-default MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemText-root"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 makeStyles-weight-942 makeStyles-weight-1029"
              >
                Transations
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1030"
        />
        <div
          className="MuiBox-root MuiBox-root-1034"
        />
        <li
          className="MuiListItem-root MuiListItem-default MuiListItem-gutters makeStyles-center-1032"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root makeStyles-empty-1031"
          >
            <img
              alt="No Transations"
              className="makeStyles-root-999"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root makeStyles-text-1033"
          >
            <span
              className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary"
            >
              No Transations
            </span>
          </div>
        </li>
      </nav>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1036"
    >
      <nav
        className="MuiList-root MuiList-padding"
      >
        <div
          className="MuiBox-root MuiBox-root-1037"
        >
          <li
            className="MuiListItem-root MuiListItem-default MuiListItem-gutters"
            disabled={false}
          >
            <div
              className="MuiListItemText-root"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 makeStyles-weight-942 makeStyles-weight-1038"
              >
                Pending Transactions
              </p>
            </div>
          </li>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1039"
        />
        <div
          className="MuiBox-root MuiBox-root-1040"
        />
        <li
          className="MuiListItem-root MuiListItem-default MuiListItem-gutters makeStyles-center-1032"
          disabled={false}
        >
          <div
            className="MuiListItemIcon-root makeStyles-empty-1031"
          >
            <img
              alt="No Pending Transactions"
              className="makeStyles-root-999"
              height="42"
              src="uptodate.svg"
            />
          </div>
          <div
            className="MuiListItemText-root makeStyles-text-1033"
          >
            <span
              className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary"
            >
              No Pending Transactions
            </span>
          </div>
        </li>
      </nav>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1041"
  />
  <div
    className="MuiBox-root MuiBox-root-1042"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-999"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Extension Login page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1051"
  id="/login"
>
  <div
    className="MuiBox-root MuiBox-root-1052"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1055 makeStyles-weight-1056 makeStyles-inline-1053"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1055 makeStyles-weight-1087 makeStyles-inline-1053"
    >
       
      In
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1088"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1089"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputType"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1127"
      >
        <div
          className="MuiBox-root MuiBox-root-1128"
        >
          <button
            className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled MuiButton-fullWidth"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root MuiBox-root-1149"
    >
      <div
        className="MuiBox-root MuiBox-root-1150"
      >
        <a
          href="/restore-account"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-1055 makeStyles-weight-1151 makeStyles-inline-1053 makeStyles-link-1054"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1152"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorPrimary makeStyles-weight-1055 makeStyles-weight-1153 makeStyles-inline-1053 makeStyles-link-1054"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1154"
  />
  <div
    className="MuiBox-root MuiBox-root-1155"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1156"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Extension Recovery Phrase page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1162"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root MuiBox-root-1163"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1166 makeStyles-weight-1167 makeStyles-inline-1164"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1166 makeStyles-weight-1198 makeStyles-inline-1164"
    >
       
      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1199"
  >
    <div
      className="MuiBox-root MuiBox-root-1200"
    >
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-1166 makeStyles-weight-1201"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1202"
    >
      <button
        aria-label="Export as CSV"
        className="MuiButtonBase-root MuiFab-root makeStyles-root-1203 MuiFab-extended makeStyles-extended-1204 MuiFab-secondary makeStyles-secondary-1206 MuiFab-sizeSmall makeStyles-sizeSmall-1205"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          <div
            className="MuiBox-root MuiBox-root-1220"
          >
            <img
              alt="Download"
              className="makeStyles-root-1221"
              height={16}
              src="download.svg"
              width={16}
            />
          </div>
          <div
            className="MuiBox-root MuiBox-root-1226"
          >
            <h6
              className="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary makeStyles-weight-1166 makeStyles-weight-1227"
            >
              Export as .PDF
            </h6>
          </div>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1228"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1166 makeStyles-weight-1229 makeStyles-inline-1164"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1230"
    >
      <div
        className="MuiBox-root MuiBox-root-1231"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Back
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1249"
  />
  <div
    className="MuiBox-root MuiBox-root-1250"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1221"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Extension Restore Account page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1262"
  id="/restore-account"
>
  <div
    className="MuiBox-root MuiBox-root-1263"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1266 makeStyles-weight-1267 makeStyles-inline-1264"
    >
      Restore
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1266 makeStyles-weight-1298 makeStyles-inline-1264"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1299"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-1266 makeStyles-weight-1300 makeStyles-inline-1264"
    >
      Restore your account with your recovery words. Enter your recovery words here.
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1301"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <textarea
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
              disabled={false}
              name="recoveryPhraseField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Recovery phrase"
              required={false}
              rows={5}
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1339"
      >
        <div
          className="MuiBox-root MuiBox-root-1340"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1361"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Restore
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1362"
  />
  <div
    className="MuiBox-root MuiBox-root-1363"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1364"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Extension Welcome page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1380"
  id="/welcome"
>
  <div
    className="MuiBox-root MuiBox-root-1381"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1384 makeStyles-weight-1385 makeStyles-inline-1382"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1384 makeStyles-weight-1416 makeStyles-inline-1382"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1417"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1384 makeStyles-weight-1418 makeStyles-inline-1382"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root MuiBox-root-1419"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiBox-root MuiBox-root-1440"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiBox-root MuiBox-root-1441"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1442"
  />
  <div
    className="MuiBox-root MuiBox-root-1443"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1444"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Extension/Share Identity Accept Request page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1543"
>
  <div
    className="MuiBox-root MuiBox-root-1544"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1547 makeStyles-weight-1548 makeStyles-inline-1545"
    >
      Share
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1547 makeStyles-weight-1579 makeStyles-inline-1545"
    >
       
      Identity
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1580"
  >
    <div
      className="MuiBox-root MuiBox-root-1581"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1547 makeStyles-weight-1582"
      >
        The following site:
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary makeStyles-weight-1547 makeStyles-weight-1583"
      >
        http://finex.com
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary makeStyles-weight-1547 makeStyles-weight-1584 makeStyles-inline-1545"
      >
        will be able to see
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1547 makeStyles-weight-1585 makeStyles-inline-1545"
      >
         
        your identity on
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary makeStyles-weight-1547 makeStyles-weight-1586 makeStyles-inline-1545"
      >
         
        ETH
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1587"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Confirm
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiBox-root MuiBox-root-1608"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1609"
  />
  <div
    className="MuiBox-root MuiBox-root-1610"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1611"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Extension/Share Identity Show Request page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1460"
>
  <div
    className="MuiBox-root MuiBox-root-1461"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1464 makeStyles-weight-1465 makeStyles-inline-1462"
    >
      Share
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1464 makeStyles-weight-1496 makeStyles-inline-1462"
    >
       
      Identity
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1497"
  >
    <div
      className="MuiBox-root MuiBox-root-1498"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1464 makeStyles-weight-1499"
      >
        The following site:
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary makeStyles-weight-1464 makeStyles-weight-1500"
      >
        http://finex.com
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1464 makeStyles-weight-1501 makeStyles-inline-1462"
      >
        wants to see your identity on
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary makeStyles-weight-1464 makeStyles-weight-1502 makeStyles-inline-1462"
      >
         
        ETH
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1503"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Accept
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiBox-root MuiBox-root-1524"
    />
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-fullWidth"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Reject
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1525"
  />
  <div
    className="MuiBox-root MuiBox-root-1526"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1527"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Extension/Signup New Account page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1627"
  id="/signup1"
>
  <div
    className="MuiBox-root MuiBox-root-1628"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1631 makeStyles-weight-1632 makeStyles-inline-1629"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1631 makeStyles-weight-1663 makeStyles-inline-1629"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1664"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1665"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root Mui-required Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1722"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root Mui-required Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputType"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1723"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root Mui-required Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputType"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1724"
      >
        <div
          className="MuiBox-root MuiBox-root-1725"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1746"
        >
          <button
            className="MuiButtonBase-root Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled MuiButton-fullWidth"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1747"
  />
  <div
    className="MuiBox-root MuiBox-root-1748"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1749"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Extension/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1765"
  id="/signup2"
>
  <div
    className="MuiBox-root MuiBox-root-1766"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1769 makeStyles-weight-1770 makeStyles-inline-1767"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1769 makeStyles-weight-1801 makeStyles-inline-1767"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1802"
  >
    <div
      className="MuiBox-root MuiBox-root-1803"
    >
      <div
        className="MuiBox-root MuiBox-root-1804"
      >
        <div
          className="MuiBox-root MuiBox-root-1805"
        >
          <h6
            className="MuiTypography-root MuiTypography-subtitle2 makeStyles-weight-1769 makeStyles-weight-1806 makeStyles-inline-1767"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1808"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1811"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          className="MuiSwitch-root"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label"
            >
              <span
                className="MuiSwitch-icon"
              />
              <input
                className="MuiPrivateSwitchBase-input"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </span>
          <span
            className="MuiSwitch-bar"
          />
        </span>
        <span
          className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
        />
      </label>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1847"
    >
      <p
        className="MuiTypography-root MuiTypography-body1 makeStyles-weight-1769 makeStyles-weight-1848 makeStyles-inline-1767"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root MuiBox-root-1849"
    >
      <div
        className="MuiBox-root MuiBox-root-1850"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Back
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1868"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1869"
  />
  <div
    className="MuiBox-root MuiBox-root-1870"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1811"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Extension/Signup Security Hint page 1`] = `
<div
  className="MuiBox-root MuiBox-root-1882"
  id="/signup3"
>
  <div
    className="MuiBox-root MuiBox-root-1883"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 MuiTypography-colorPrimary makeStyles-weight-1886 makeStyles-weight-1887 makeStyles-inline-1884"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root MuiTypography-h4 makeStyles-weight-1886 makeStyles-weight-1918 makeStyles-inline-1884"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1919"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle1 makeStyles-weight-1886 makeStyles-weight-1920 makeStyles-inline-1884"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root MuiBox-root-1921"
      >
        <div
          className="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth MuiTextField-root"
        >
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-1959"
      >
        <div
          className="MuiBox-root MuiBox-root-1960"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          className="MuiBox-root MuiBox-root-1981"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label"
            >
              Create
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root MuiBox-root-1982"
  />
  <div
    className="MuiBox-root MuiBox-root-1983"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1984"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
